--- a/.github/workflows/update_all.yml
+++ b/.github/workflows/update_all.yml
@@ -15,6 +15,8 @@ jobs:
             code_file: .github/scripts/GenshinSubtitle.py
           - title: genshin-textmap
             code_file: .github/scripts/GenshinTextMap.py
+          - title: star-rail-textmap
+            code_file: .github/scripts/StarRailTextMap.py
     uses: ./.github/workflows/update.yml
     with:
       title: ${{ matrix.title }}
